<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">InstagramClone</string>


    <!--===============================================Profile============================================================-->

    <!---Account Settings-->
    <string name="account_settings">Account Settings</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="sign_out">Sign Out</string>

    <!--Edit Profile-->
    <string name="change_photo">Change Profile Photo</string>
    <string name="username">Username</string>
    <string name="website">Website</string>
    <string name="private_information">Private Information</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="name">Name</string>
    <string name="bio">Bio</string>
    <string name="email_address" tools:ignore="ExtraTranslation">E-mail Address</string>
    <string name="gender">Gender</string>

    <!--Toolbar-->
    <string name="options">Options</string>

    <!--====================================================================================================================-->

</resources>
